# tempwriter

./: .gitignore  .gitmodules  README.md  app.py  cvfpscalc.py  mmm_transfer_shadowalpha_gesture.ipynb  pyproject.toml  sample_mediapipe_hands.py  sample_multi_threading.py  server.py
.github/workflows/: pr-auto-approve.yaml
data/AA/: a.txt  e.txt  l.txt  p.txt
data/scripts/: data_aug.py  flip.py  resize.py
gesture/: control.py
hands/: gesture_recognizer.py
hands/point_history_classifier/: point_history_classifier.py
js_to_py/: controller.py
keypoint_classifier/: keypoint_classifier.py
model/train/: train_shadow_alphabet.ipynb
printer/: controller.js  controller.py  escpos.js
templates/: index.html
tempwriter/: app.py  main.py
tempwriter/printer/: binaryimage.js
tempwriter/templetes/: index.html
tempwriter/views/: index.html  websocket.js
